--- a/tasksToday/Base.lproj/Main.storyboard
+++ b/tasksToday/Base.lproj/Main.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="39S-gd-eyQ">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="39S-gd-eyQ">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
@@ -25,6 +25,7 @@
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
+                                    <action selector="nextYearTapped:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="pmF-aa-IMK"/>
                                     <segue destination="08q-Pe-HTm" kind="push" identifier="nextYear" id="nYA-U4-dJg"/>
                                 </connections>
                             </button>
@@ -36,6 +37,7 @@
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
+                                    <action selector="lastYearTapped:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="hey-Ey-CJl"/>
                                     <segue destination="08q-Pe-HTm" kind="push" identifier="lastYear" id="I6L-VG-azD"/>
                                 </connections>
                             </button>
@@ -49,12 +51,12 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="778" y="83"/>
+            <point key="canvasLocation" x="1016" y="92"/>
         </scene>
-        <!--View Controller-->
+        <!--Event Detail View Controller-->
         <scene sceneID="npS-XR-zte">
             <objects>
-                <viewController id="08q-Pe-HTm" sceneMemberID="viewController">
+                <viewController id="08q-Pe-HTm" customClass="FISEventDetailViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="Sly-me-kIz"/>
                         <viewControllerLayoutGuide type="bottom" id="BwX-3J-MgW"/>
@@ -78,10 +80,13 @@
                         </accessibility>
                     </view>
                     <navigationItem key="navigationItem" id="jML-hK-JxE"/>
+                    <connections>
+                        <outlet property="textView" destination="MJ7-Oe-1dd" id="zPZ-fw-N3p"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="GNZ-sn-vCe" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1376" y="83"/>
+            <point key="canvasLocation" x="1423" y="92"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="KjL-1N-nWD">
@@ -102,11 +107,6 @@
             <point key="canvasLocation" x="598" y="751"/>
         </scene>
     </scenes>
-    <simulatedMetricsContainer key="defaultSimulatedMetrics">
-        <simulatedStatusBarMetrics key="statusBar"/>
-        <simulatedOrientationMetrics key="orientation"/>
-        <simulatedScreenMetrics key="destination" type="retina4"/>
-    </simulatedMetricsContainer>
     <inferredMetricsTieBreakers>
         <segue reference="nYA-U4-dJg"/>
     </inferredMetricsTieBreakers>
